Updated content in graces.html. Added hidden_skills .html and .js files. Added smithing_texts/img/sword_logo.png.

--- a/nioh2/equipment/graces/graces.html
+++ b/nioh2/equipment/graces/graces.html
@@ -294,37 +294,9 @@
                     <th>Description</th>
                 </tr>
 
-
-
-                <!-- 
-                <tr class="even:bg-dark-gray-2">
-                    <td>
-                        <span class="font-bold"></span><br>
-                        <span class="italic"></span>
-                    </td>
-                    <td>
-                        2 PC: <br>
-                        <br><br>
-
-                        3 PC: <br>
-                        <br><br>
-
-                        4 PC: <br>
-                        <br><br>
-
-                        5 PC: <br>
-                        <br><br>
-
-                        6 PC: <br>
-                        <br><br>
-
-                        7 PC: <br>
-                    </td>
-                </tr>
-                -->
-
-
-
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold">A Multitude of Hopes</span><br><br>
@@ -962,6 +934,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold">A Deadly Conviction (DLC 3)</span><br><br>
@@ -1600,6 +1575,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold">A Master Swordsman's Power</span><br><br>
@@ -2186,6 +2164,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-divine-text-color">Benzaiten's Grace</span><br><br>
@@ -2451,6 +2432,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Acala's Grace</span><br><br>
@@ -2716,6 +2700,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Futsunushi</span><br><br>
@@ -2983,6 +2970,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Oyamatsumi</span><br><br>
@@ -3188,7 +3178,7 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
     <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
 
-    <!-- cores_list.js -->
+    <!-- graces.js -->
     <script type="text/javascript" src="./js/graces.js" defer></script>
 
 </body>
