--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -366,7 +366,20 @@
                     </td>
                 </tr>
 
-                
+                <!-- Kurama Sword Dance -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Kurama Sword Dance</span>
+                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yoshitsune</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Bond Of The Blade</a>
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
