--- a/nioh2/tools/tools_index.html
+++ b/nioh2/tools/tools_index.html
@@ -230,7 +230,7 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl">Tools & Resources</h1>
+            <h1 class="text-yellow-400 text-5xl md:text-6xl text-center">Tools & Resources</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
