Added more content to hidden_skills.html.

--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -317,15 +317,15 @@
 
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-2">
-                        <span>Dragon Fang</span>
+                        <span></span>
                         <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
                     </div></td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+                        <a class="text-sky-400 hover:text-sky-600" href=""></a>
                     </td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+                        <a class="text-sky-400 hover:text-sky-600" href=""></a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href=""></a>
                     </td>
                 </tr>
 
@@ -380,10 +380,354 @@
                         <a class="text-sky-400 hover:text-sky-600" href="">Bond Of The Blade</a>
                     </td>
                 </tr>
+
+                <!-- Severing Spin -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Severing Spin</span>
+                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yorimitsu</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Suzune In The Flames</a>
+                    </td>
+                </tr>
+
+                <!-- Izuna Drop -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Izuna Drop</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Dragon Clan</a>
+                    </td>
+                </tr>
+
+                <!-- Reverse Impact -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Reverse Impact</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Fujiwara no Chikata</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Spirit's Return</a>
+                    </td>
+                </tr>
+
+                <!-- Punish The Proud -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Punish The Proud</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters of Okehazama</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+                    </td>
+                </tr>
+
+                <!-- Dragon Claw -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Dragon Claw</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+                    </td>
+                </tr>
+
+                <!-- Ultimate Sign Of The Cross -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Ultimate Sign Of The Cross</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+                    </td>
+                </tr>
+
+                <!-- Double-Headed Slice -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Double-Headed Slice</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Two Faces Of Hospitality</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+                    </td>
+                </tr>
+
+                <!-- Triple Threat -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Triple Threat</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Mataza Of The Spear</a>
+                    </td>
+                </tr>
+
+                <!-- Bracing Breeze -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Bracing Breeze</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Mataza Of The Spear</a>
+                    </td>
+                </tr>
+
+                <!-- Spirit Storm -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Spirit Storm</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Obsidian Samurai</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Formal Match</a>
+                    </td>
+                </tr>
+
+                <!-- Water Drop -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Water Drop</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Hachisuka Koroku</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Shiftling's Wise Judgement</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">High-Spirited Demon</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Japanese Heart, Yokai Smarts</a>
+                    </td>
+                </tr>
+
+                <!-- Second Wind -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Second Wind</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Hachisuka Koroku</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Shiftling's Wise Judgement</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">High-Spirited Demon</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Japanese Heart, Yokai Smarts</a>
+                    </td>
+                </tr>
+
+                <!-- Swirling Snow -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Swirling Snow</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Magara Naotaka</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Corpses and Ice</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Brother's Blades</a>
+                    </td>
+                </tr>
+
+                <!-- Dragon Horn -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Dragon Horn</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Point Of No Return</a>
+                    </td>
+                </tr>
+
+                <!-- Storm of Strikes -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Storm of Strikes</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Like Lightning</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+                    </td>
+                </tr>
+
+                <!-- Deadly Spiral -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Deadly Spiral</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Shibata Katsuie</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Shiftling's Wise Judgement</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wave of Terror</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Restless Spirits</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Demon Parade Picture Scrolls</a>
+                    </td>
+                </tr>
+
+                <!-- Windswept -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Windswept</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Hidden Monsters of Okehazama</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+                    </td>
+                </tr>
+
+                <!-- Fleeting Edge -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Fleeting Edge</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Mumyo</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Sharp Eyes</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+                    </td>
+                </tr>
+
+                <!-- Arc Of Chaos -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Arc Of Chaos</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Tate Eboshi</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Dawn Of The Demon</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Rivals Return</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Cradle Of The Demon (Twilight Mission)</a>
+                    </td>
+                </tr>
+
+                <!-- Roar Power -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Roar Power</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Soul Of The Warrior Monk</a>
+                    </td>
+                </tr>
+
+                <!-- Tiger Claws -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Tiger Claws</span>
+                        <img src="" alt="" class="w-[60px] h-auto">
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Dragon Clan</a>
+                    </td>
+                </tr>
+
+                <!-- Sacred Bird Cry -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Sacred Bird Cry</span>
+                        <span class="font-bold text-red-600">Any Weapon</span>
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yoshitsune</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Bond Of The Blade</a>
+                    </td>
+                </tr>
+
+                <!-- Sacred Bird Flight -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-2">
+                        <span>Sacred Bird Flight</span>
+                        <span class="font-bold text-red-600">Any Weapon</span>
+                    </div></td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yorimitsu</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Suzune In The Flames</a>
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
-    
 
 
     <!-- ========== ========== ========== ========== ==========
@@ -443,5 +787,5 @@
 
 <!-- TODO -->
 <!--
-    -
+
 -->
