Added the respective images for smithing_texts_index.html. Updated classes in world_index.html.

--- a/nioh2/world/world_index.html
+++ b/nioh2/world/world_index.html
@@ -253,7 +253,7 @@
                     href="https://liukang1080.github.io/gamewiki/nioh2/world/missions/missions_index.html">
                     
                     <img src="./img/missions_logo.png" alt="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Missions</span>
                 </a>
 
@@ -286,7 +286,7 @@
                     href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/underworld_index.html">
                     
                     <img src="./img/underworld_logo.png" alt="">
-                    <span class="mask w-full p-2 place-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">The Underworld</span>
                 </a>
 
