--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -252,7 +252,8 @@
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/hidden_skills.html">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <img src="./img/skill_icon.png" alt="" class="h-[75px] w-auto">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Hidden Skills</span>
                 </a>
 
@@ -261,7 +262,8 @@
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <img src="./img/weapons_icon.png" alt="" class="">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Weapon Smithing Texts</span>
                 </a>
 
@@ -270,7 +272,8 @@
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <img src="./img/armor_icon.png" alt="">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
                 </a>
 
@@ -279,7 +282,8 @@
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <img src="./img/misc_smithing_icon.png" alt="">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
                 </a>
 
@@ -288,7 +292,8 @@
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
+                    <img src="./img/missions_logo.png" alt="" class="h-[75px] w-auto">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Mission Progression Unlocks</span>
                 </a>
             </div>
