--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -258,6 +258,7 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Mechanics of "Art of Combat Skills" and "Hidden Skills"</h2>
+            <img src="./img/skill_icon.png" alt="">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
@@ -274,17 +275,18 @@
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
-                <span class="font-bold text-red-600">NOT</span> affect the drop rate of Smithing Texts or Hidden Skills. Luck 
+                <span class="font-bold text-red-600">NOT</span> affect the drop rate of Smithing Texts and Hidden Skills. Luck 
                 only affects the rarity of items that drop, NOT the chance of an item dropping. Buffs like Luck Bringer Talisman, 
-                and Soul Purge Talisman does not affect the Smithing Text or Hidden Skills drop rate. Tempering Luck+ attributes 
-                on armor, accessories, and Soul Cores also does not affect the Smithing Texts / Hidden Skills drop rate.
+                and Soul Purge Talisman does not affect the Smithing Text and Hidden Skills drop rate. Tempering Luck+ attributes 
+                on armor, accessories, and Soul Cores also does not affect the Smithing Texts and Hidden Skills drop rate.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Item Drop Rate affects Hidden Skills:</span> Item Drop Rate buffs 
                 <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is 
                 no active buff that we can use to manually increase our IDR at will, but we can temper on the attribute 
-                "Increase Item Drop Rate" onto the Weapon & Armor pieces, Accessories, and Soul Cores.
+                "<span class="text-uncommon-text-color">Increase Item Drop Rate</span>" onto the Weapon & Armor pieces, 
+                Accessories, and Soul Cores.
             </p>
         </div>
     </section>
@@ -309,29 +311,6 @@
                     <th>Enemy</th>
                     <th>Missions</th>
                 </tr>
-
-
-                <!-- 
-
-
-
-                <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
-                    </div></td>
-                    <td>
-                        <a class="text-sky-400 hover:text-sky-600" href=""></a>
-                    </td>
-                    <td>
-                        <a class="text-sky-400 hover:text-sky-600" href=""></a><br><br>
-                        <a class="text-sky-400 hover:text-sky-600" href=""></a>
-                    </td>
-                </tr>
-
-
-
-                -->
 
                 <!-- ==========
                 Table Data
@@ -949,7 +928,6 @@
     Back to top button
     ========== ========== ========== ========== ========== -->
     <a id="back-to-top-button" href="#">Top</a>
-
 
 
     <!-- ========== ========== ========== ========== ==========
