--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -458,11 +458,368 @@
 				<tr class="even:bg-dark-gray-2">
 					<td>Haccho Nenbutsu</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href=""></a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saika Magoichi</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href=""></a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href=""></a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Third Word</a>
+					</td>
+				</tr>
+
+                <!-- Raikiri -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="2">Raikiri</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High Spirited Demon</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+                    </td>
+                </tr>
+
+                <!-- Wave Swimmer -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Wave Swimmer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Akechi Chikakage -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="2">Akechi Chikakage</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces of Hospitality</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+                    </td>
+                </tr>
+
+                <!-- Bizen Kageyasu -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Bizen Kageyasu</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tsukuhara Bokuden</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Way Of The Warrior: Adept</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+                <!-- Swift Hawk -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Swift Hawk</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kato Danzo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Way Of The Ninja: Verteran</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+                <!-- Mikazuki Munechika -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="2">Mikazuki Munechika</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+                    </td>
+                </tr>
+
+                <!-- Odenta Mitsuyo -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Odenta Mitsuyo</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mataza Of The Spear</a>
+					</td>
+				</tr>
+
+                <!-- Onimaru Kunitsuna -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="3">Onimaru Kunitsuna</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Enenra</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Beast Born of Smoke And Flames</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Traces of a Raging Blaze (Twilight Mission)</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">William</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+                    </td>
+                </tr>
+
+                <!-- Dodanuki Masakuni -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Dodanuki Masakuni</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kato Kiyomasa (Seven Spears #7)</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+
+                <!-- Kusanagi Tsurugi -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Kusanagi Tsurugi</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Demon's Maw -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="2">Demon's Maw</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">William</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+                    </td>
+                </tr>
+
+                <!-- Juzumaru Tsunetsugu -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="3">Juzumaru Tsunetsugu</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">William</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+                    </td>
+                </tr>
+
+                <!-- Heshikiri Hasabe -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Heshikiri Hasabe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+                <!-- Water God Slayer -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Water God Slayer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings of Phoenix (Twilight Mission)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Suijingiri Kanemitsu -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Suijingiri Kanemitsu</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings of Phoenix (Twilight Mission)</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Hikoemon Ichimonji -->
+				<tr class="even:bg-dark-gray-2">
+					<td rowspan="2">Hikoemon Ichimonji</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kasha</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Defiled Sanctuary (Twilight Mission)</a>
+					</td>
+				</tr>
+                <tr>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
+                    </td>
+                    <td>
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mount Tenno</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Mountain Of The Dark Lord (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a>
+                    </td>
+                </tr>
+
+                <!-- Ishida Masamune -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Ishida Masamune</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+                <!-- Usumidori -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Usumidori</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Minamoto No Yoshitsune</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Eternal Rivals</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Bond Of The Blade</a>
+					</td>
+				</tr>
+
+                <!-- Dragon Sword -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Dragon Sword</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Dragon Clan</a>
+					</td>
+				</tr>
+
+                <!-- Demon Cutter -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Demon Cutter</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Watanabe No Tsuna</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+                <!-- Dojikiri Yasutsuna -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Dojikiri Yasutsuna</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Minamoto No Yorimitsu</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Suzune In The Flames</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+                <!-- Kenmyoren -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Kenmyoren</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nightmare Bringer</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Distant Dream</a>
+					</td>
+				</tr>
+
+                <!-- Dancing Blade -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Dancing Blade</td>
+					<td>
+                        <span>-</span>
+                    </td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Song of Yokai</a>
+                    </td>
+				</tr>
+
+                <!-- Demon Horde Katana -->
+				<tr class="even:bg-dark-gray-2">
+					<td>Demon Horde Katana</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Found at the Shrine in the "Boons" section</span>
 					</td>
 				</tr>
             </table>
