Updated content in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -819,7 +819,7 @@
 				<tr class="even:bg-dark-gray-2">
 					<td>Demon Horde Katana</td>
 					<td colspan="2">
-                        <span>Pre Order DLC / Found at the Shrine in the "Boons" section</span>
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
 					</td>
 				</tr>
             </table>
