Updated the alternating colors so that they alternate on proper rows of the Katana table in weapon_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -321,7 +321,7 @@
                 Table Data
                 ========== -->
                 <!-- Akechi Chikakage -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="2">Akechi Chikakage</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
@@ -330,7 +330,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">The Two Faces of Hospitality</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
                     </td>
@@ -342,7 +342,7 @@
                 </tr>
 
                 <!-- Azai Ichimonji -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td>Azai Ichimonji</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Azai Nagamasa</a>
@@ -354,7 +354,7 @@
 				</tr>
 
                 <!-- Bizen Kageyasu -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Bizen Kageyasu</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tsukuhara Bokuden</a>
@@ -366,18 +366,18 @@
 				</tr>
 
                 <!-- Dancing Blade -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td>Dancing Blade</td>
 					<td>
                         <span>-</span>
                     </td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Song of Yokai</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Song of the Yokai</a>
                     </td>
 				</tr>
 
                 <!-- Demon Cutter -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Demon Cutter</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Watanabe No Tsuna</a>
@@ -388,7 +388,7 @@
 				</tr>
 
                 <!-- Demon's Maw -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td rowspan="2">Demon's Maw</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
@@ -487,7 +487,7 @@
                 </tr>
 
                 <!-- Ishida Masamune -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Ishida Masamune</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -499,7 +499,7 @@
 				</tr>
 
                 <!-- Jikkyu Mitsutada -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td>Jikkyu Mitsutada</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Oda Nobunaga</a>
@@ -510,7 +510,7 @@
 				</tr>
 
                 <!-- Juzumaru Tsunetsugu -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="3">Juzumaru Tsunetsugu</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
@@ -519,7 +519,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">William</a>
                     </td>
@@ -527,7 +527,7 @@
                         <a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
                     </td>
                 </tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
                     </td>
@@ -538,7 +538,7 @@
                 </tr>
 
                 <!-- Kaikunigo -->
-				<tr class="bg-dark-gray-2">
+				<tr class="">
 					<td>Kaikunigo</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Takeda Shingen</a>
@@ -549,7 +549,7 @@
 				</tr>
 
                 <!-- Kenmyoren -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Kenmyoren</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Nightmare Bringer</a>
@@ -560,7 +560,7 @@
 				</tr>
 
                 <!-- Kusanagi Tsurugi -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td>Kusanagi Tsurugi</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -572,7 +572,7 @@
 				</tr>
 
                  <!-- Mikazuki Munechika -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="2">Mikazuki Munechika</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
@@ -581,7 +581,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
                     </td>
@@ -613,7 +613,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Traces of a Raging Blaze (Twilight Mission)</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">William</a>
                     </td>
@@ -621,7 +621,7 @@
                         <a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
                     </td>
                 </tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
                     </td>
@@ -653,7 +653,7 @@
                 </tr>
 
                 <!-- Smirkwiper -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Smirkwiper</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shibata Katsuie</a>
@@ -665,7 +665,7 @@
 				</tr>
 
                 <!-- Sohaya Tsurugi -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td rowspan="2">Sohaya Tsurugi</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Azai Nagamasa</a>
@@ -686,7 +686,7 @@
                 </tr>
 
                 <!-- Starcutter Sword -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Starcutter Sword</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Obsidian Samurai</a>
@@ -722,7 +722,7 @@
 				</tr>
 
                 <!-- Tokagemaru -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td rowspan="2">Tokagemaru</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
@@ -732,7 +732,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
 					</td>
 				</tr>
-                <tr class="bg-dark-gray-2">
+                <tr class="">
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
                     </td>
@@ -743,7 +743,7 @@
                 </tr>
 
                 <!-- Transient Blade -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Transient Blade</td>
 					<td>
 						N/A Mission Reward
@@ -754,7 +754,7 @@
 				</tr>
 
                 <!-- Udoto -->
-				<tr class="bg-dark-gray-2">
+				<tr class="">
 					<td>Udoto</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
@@ -766,7 +766,7 @@
 				</tr>
 
                 <!-- Usumidori -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Usumidori</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Minamoto No Yoshitsune</a>
@@ -778,7 +778,7 @@
 				</tr>
 
                 <!-- Water God Slayer -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="">
 					<td>Water God Slayer</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
@@ -791,7 +791,7 @@
 				</tr>
 
                 <!-- Wave Swimmer -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Wave Swimmer</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
@@ -804,7 +804,7 @@
 				</tr>
 
                 <!-- Wooden Sword -->
-                <tr class="even:bg-dark-gray-2">
+                <tr class="">
                     <td>Wooden Sword</td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Tsukuhara Bokuden</a>
@@ -816,7 +816,7 @@
                 </tr>
 
                 <!-- Demon Horde Katana -->
-				<tr class="even:bg-dark-gray-2">
+				<tr class="bg-dark-gray-2">
 					<td>Demon Horde Katana</td>
 					<td colspan="2">
                         <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
